--- a/flask/app/static/css/category.css
+++ b/flask/app/static/css/category.css
@@ -15,9 +15,10 @@
 }
 .darkmode {
   --basebg--color: #212121;
-  --base--color: #282c40;
+  --base--color: #121212;
   --text--color: #888;
   --text2--color: #aaa;
+  --title-color: #ffffff;
   --text3--color: #fff;
   --buttonbg--color: #aaa;
   --border--color: gray;
@@ -39,7 +40,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0 16px;
-    background-color: var(--card-bg);
+    background-color: var(--base--color);
     top: 0; left: 0; right: 0;
     height: 60px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -50,7 +51,7 @@ body {
 .back-btn { text-decoration: none; color: var(--title-color); }
 .page-title { color: var(--title-color); font-size: 1.2rem; font-weight: 600; margin: 0; position: absolute; left: 50%; transform: translateX(-50%); }
 
-.material-icons { font-size: 2rem; color: var(--title-color); }
+.material-icons { font-size: 2rem; color: var(-color); }
 .top-bar { display: flex; justify-content: space-between; margin-top: 10px; border-bottom: 2px solid var(--border--color); padding: 10px; }
 .top-bar span { color:var(--text2--color); }
 .back, .category, .cart { display: flex; flex-direction: column; align-items: center; }
