--- a/flask/app/templates/cart.html
+++ b/flask/app/templates/cart.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/cart.css') }}">
 </head>
 <body>
@@ -30,9 +29,15 @@
     <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-            {% endif %}
+            <div class="alert-box">
+            {% for category, message in messages %}
+                <div class="notification {{ category }}">
+                {{ message }}
+                </div>
+            {% endfor %}
+            </div>
+        {% endif %}
         {% endwith %}
-
         {% for c in cart_items %}
         <div class="cart-item-wrapper" id="wrapper-{{ c.CartID }}"
              ontouchstart="startSwipe(event, {{ c.CartID }})"
