--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -6,7 +6,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/category.css') }}">
     <title>Category Page</title>
 </head>
@@ -28,7 +27,7 @@
         <h1 class="page-title">Category</h1>
         <div class="cart">
             <a href="{{ url_for('cart')}}" class="cart-link">
-                <i class="material-icons" style="color:black;">shopping_cart</i>
+                <i class="material-icons">shopping_cart</i>
                 {% if cart_count > 0 %}
                 <span class="cart-badge">{{ cart_count }}</span>
                 {% endif %}
