--- a/flask/app/static/css/adminlist.css
+++ b/flask/app/static/css/adminlist.css
@@ -15,6 +15,7 @@
 .darkmode {
     --bg-color: #121212;
     --card-bg: #1e1e1e;
+    --title-color: #ffff;
     --text-color: #e0e0e0;
     --subtext-color: #aaa;
     --search-bg: #2c2c2c;
