--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+    <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='ico/stock_logo.png') }}">
-    <script type="text/javascript" src="../templates/js/darkmode.js" defer></script>
+    <script type="text/javascript" src="../templates/js/darkmode.js" defer></script> 
     <title>Home page</title>
 </head>
 <body class="lightmode en">
@@ -157,7 +157,7 @@
 
     <script>
     if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("{{ url_for('static', filename='service-worker.js') }}")
+      navigator.serviceWorker.register("/service-worker.js")
         .then(reg => console.log("Service Worker registered", reg))
         .catch(err => console.error("SW registration failed", err));
         }
