--- a/flask/app/templates/adminlist.html
+++ b/flask/app/templates/adminlist.html
@@ -9,11 +9,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Admin List</title>
 </head>
-<body class="lightmode">
+<body class="">
     <script>
-        const darkmode = localStorage.getItem('darkmode');
-        if (darkmode === 'active') { document.body.classList.replace('lightmode', 'darkmode'); }
-    </script>
+        document.addEventListener('DOMContentLoaded', () => {
+          const mode = localStorage.getItem('darkmode');
+          if (mode === 'dark') {
+            document.body.classList.add('darkmode');
+            document.body.classList.remove('lightmode');
+          } else {
+            document.body.classList.add('lightmode');
+            document.body.classList.remove('darkmode');
+          }
+        });
+        </script>
     <div class="header">
         <div class="header-left">
             <a href="{{ url_for('homepage') }}" class="back-btn">
