--- a/flask/app/static/css/setting.css
+++ b/flask/app/static/css/setting.css
@@ -1,6 +1,6 @@
 :root{
     --bg--color: #FFF;
-    --base--color: #EEEEEE;
+    --base--color: #FFF;
     --text--color: #000;
     --text2--color: #777;
     --border--color: gray;
@@ -11,7 +11,7 @@
 
 .darkmode{
     --bg--color: #212121;
-    --base--color: #121212;
+    --base--color: #212121;
     --text--color: #FFF;
     --text2--color: #bbb;
     --border--color: #eee;
