--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -12,7 +12,19 @@
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='ico/stock_logo.png') }}">
     <title>Home page</title>
 </head>
-<body class="lightmode en">
+<body class="en">
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          const mode = localStorage.getItem('darkmode');
+          if (mode === 'dark') {
+            document.body.classList.add('darkmode');
+            document.body.classList.remove('lightmode');
+          } else {
+            document.body.classList.add('lightmode');
+            document.body.classList.remove('darkmode');
+          }
+        });
+    </script>
     <div class="top-bar">
         <div class="profile-wrapper">
             <div class="profile-circle">
@@ -29,10 +41,10 @@
         </div>
         
         <div class="action-wrapper">
-            <button id="theme-switch">
+            <!-- <button id="theme-switch">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
-            </button>
+            </button> -->
 
             <div class="notification-circle notification">
                 <a href="{{ url_for('notification') }}">
@@ -47,15 +59,15 @@
     
     
     <div class="category-container">
-        <div class="category">
+        <!-- <div class="category">
             <button onclick="urlFor('statistic')" class="circle-button circle-button-lightmode">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M80-120v-80h800v80H80Zm40-120v-280h120v280H120Zm200 0v-480h120v480H320Zm200 0v-360h120v360H520Zm200 0v-600h120v600H720Z"/></svg>
             </button>
             <span id="stats">Statistics</span>
-        </div>
+        </div> -->
         
         <div class="category">
-            <button onclick="urlFor('history')" class="circle-button circle-button-lightmode">
+            <button onclick="urlFor('history')" class="circle-button">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-138 0-240.5-91.5T122-440h82q14 104 92.5 172T480-200q117 0 198.5-81.5T760-480q0-117-81.5-198.5T480-760q-69 0-129 32t-101 88h110v80H120v-240h80v94q51-64 124.5-99T480-840q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-120Zm112-192L440-464v-216h80v184l128 128-56 56Z"/></svg>
             </button>
             <span id="hist">History</span>
@@ -63,14 +75,14 @@
         
 
         <div class="category">
-            <button onclick="urlFor('newitem')" class="circle-button circle-button-lightmode">
+            <button onclick="urlFor('newitem')" class="circle-button">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>
             </button>
             <span id="addItem">Add</span>
         </div>
 
         <div class="category"> 
-            <button onclick="urlFor('setting')" class="circle-button circle-button-lightmode">
+            <button onclick="urlFor('setting')" class="circle-button">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm112-260q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Z"/></svg>
             </button>
             <span id="settings">Settings</span>
@@ -167,32 +179,32 @@
 </body>
 </html>
 <script>
-    let darkmode = localStorage.getItem('darkmode');
-    const themeSwitch = document.getElementById('theme-switch');
-    const circleButtons = document.querySelectorAll('.circle-button');
+    // let darkmode = localStorage.getItem('darkmode');
+    // const themeSwitch = document.getElementById('theme-switch');
+    // const circleButtons = document.querySelectorAll('.circle-button');
 
-    const enableDarkmode = () => {
-        document.body.classList.replace('lightmode', 'darkmode');
-        localStorage.setItem('darkmode', 'active');
-        circleButtons.forEach(button => {
-            button.classList.replace('circle-button-lightmode', 'circle-button-darkmode');
-        })
-    }
+    // const enableDarkmode = () => {
+    //     document.body.classList.replace('lightmode', 'darkmode');
+    //     localStorage.setItem('darkmode', 'active');
+    //     circleButtons.forEach(button => {
+    //         button.classList.replace('circle-button-lightmode', 'circle-button-darkmode');
+    //     })
+    // }
 
-    const disableDarkmode = () => {
-        document.body.classList.replace('darkmode', 'lightmode');
-        localStorage.setItem('darkmode', null);
-        circleButtons.forEach(button => {
-            button.classList.replace('circle-button-darkmode', 'circle-button-lightmode');
-        })
-    }
+    // const disableDarkmode = () => {
+    //     document.body.classList.replace('darkmode', 'lightmode');
+    //     localStorage.setItem('darkmode', null);
+    //     circleButtons.forEach(button => {
+    //         button.classList.replace('circle-button-darkmode', 'circle-button-lightmode');
+    //     })
+    // }
 
-    if(darkmode === "active") enableDarkmode()
+    // if(darkmode === "active") enableDarkmode()
 
-    themeSwitch.addEventListener("click", () => {
-        darkmode = localStorage.getItem('darkmode')
-        darkmode !== "active" ? enableDarkmode() : disableDarkmode()
-    })
+    // themeSwitch.addEventListener("click", () => {
+    //     darkmode = localStorage.getItem('darkmode')
+    //     darkmode !== "active" ? enableDarkmode() : disableDarkmode()
+    // })
     
     function urlFor(link) {
         location.href = '/' + link;
