--- a/flask/app/templates/languages.html
+++ b/flask/app/templates/languages.html
@@ -9,15 +9,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Languages Page</title>
 </head>
-<body class="lightmode"> 
+<body class=""> 
     <script>
-        const darkmode = localStorage.getItem('darkmode');
-        if(darkmode === 'active') {
-          document.body.classList.add('darkmode');
-        } else {
-          document.body.classList.remove('darkmode');
-        }
-    </script>
+        document.addEventListener('DOMContentLoaded', () => {
+          const mode = localStorage.getItem('darkmode');
+          if (mode === 'dark') {
+            document.body.classList.add('darkmode');
+            document.body.classList.remove('lightmode');
+          } else {
+            document.body.classList.add('lightmode');
+            document.body.classList.remove('darkmode');
+          }
+        });
+        </script>
     <div class="top-bar">
         <a href="{{ url_for('setting') }}">
             <span class="material-icons">arrow_back_ios</span>
