--- a/flask/app/templates/notification.html
+++ b/flask/app/templates/notification.html
@@ -14,12 +14,16 @@
 </head>
 <body>
     <script>
-        const darkmode = localStorage.getItem('darkmode');
-        if(darkmode === 'active') {
-          document.body.classList.add('darkmode');
-        } else {
-          document.body.classList.remove('darkmode');
-        }
+        document.addEventListener('DOMContentLoaded', () => {
+          const mode = localStorage.getItem('darkmode');
+          if (mode === 'dark') {
+            document.body.classList.add('darkmode');
+            document.body.classList.remove('lightmode');
+          } else {
+            document.body.classList.add('lightmode');
+            document.body.classList.remove('darkmode');
+          }
+        });
     </script>
     <div class="top-bar">
         <a href="{{ url_for('homepage') }}" class="back-arrow">
