--- a/flask/app/templates/pending_admin.html
+++ b/flask/app/templates/pending_admin.html
@@ -10,10 +10,18 @@
 
     <title>Pending Users</title>
 </head>
-<body class="lightmode">
+<body class="">
     <script>
-        const darkmode = localStorage.getItem('darkmode');
-        if (darkmode === 'active') { document.body.classList.replace('lightmode', 'darkmode'); }
+        document.addEventListener('DOMContentLoaded', () => {
+          const mode = localStorage.getItem('darkmode');
+          if (mode === 'dark') {
+            document.body.classList.add('darkmode');
+            document.body.classList.remove('lightmode');
+          } else {
+            document.body.classList.add('lightmode');
+            document.body.classList.remove('darkmode');
+          }
+        });
     </script>
     <div class="header">
         <a href="{{ url_for('adminlist') }}" class="back-btn"><i class="material-icons">arrow_back_ios</i></a>
