--- a/flask/app/static/css/history.css
+++ b/flask/app/static/css/history.css
@@ -75,6 +75,7 @@ body{
     display: flex;       
     flex-direction: column; 
     align-items: flex-start; 
+    color: var(--text--color);
 }
 
 .item-text span {
@@ -87,7 +88,7 @@ body{
     align-self: flex-start;
     text-align: left;
     font-size: 0.85rem;
-    opacity: 50%;
+    color: var(--text2--color);
 }
 
 .item svg{
